Ensure that the filter doesn't jump around

--- a/src/repo-filter.css
+++ b/src/repo-filter.css
@@ -12,6 +12,11 @@
     gap: 0.5em;
 }
 
+.repo-filter-header .btn-link {
+    /* ensures that when we swap between enable/disable it doesn't jump around */
+    min-width: 110px;
+}
+
 .repo-filter-content {
     display: flex;
     flex-wrap: wrap;
